--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
           feugenio/gitactionk8s:v${{ github.run_number }} 
           feugenio/gitactionk8s:latest 
   CD:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: [CI]
     steps: 
     - name: Obtendo o código
