--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
     runs-on: self-hosted
     needs: [CI]
     steps: 
-    - name: Obtendo o código
+    - name: Obtendo o código 2
       uses: actions/checkout@v4.1.5
     - name: Configuração de contexto do Kubernetes
       uses: azure/k8s-set-context@v4.0.0
