--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,20 +24,12 @@ jobs:
           feugenio/gitactionk8s:v${{ github.run_number }} 
           feugenio/gitactionk8s:latest 
   CD:
-    runs-on: self-hosted
     needs: [CI]
     steps: 
-    - name: Obtendo o código 2
-      uses: actions/checkout@v4.1.5
-    - name: Configuração de contexto do Kubernetes
-      uses: azure/k8s-set-context@v4.0.0
-      with:
-        method: kubeconfig
-        kubeconfig: ${{ secrets.K8S_CONFIG }}
-    - name: Execução do Manifesto
-      uses: Azure/k8s-deploy@v5
-      with:
-        manifests: |
-          ./k8s/deployment.yaml
-        images: |
-          feugenio/gitactionk8s:v${{ github.run_number }}
+    uses: felipeugenio/primeira-pipeline-cicd-devopspro/.github/workflows/dploy.yml
+    with:
+      manifests: |
+        k8s/deployment.yaml
+      images: |
+          fabricioveronez/aula-primeira-pipeline:v${{ github.run_number }}
+      secrets: inherit
